NetBSD Problem Report #54099

From martin@aprisoft.de  Fri Apr  5 10:06:22 2019
Return-Path: <martin@aprisoft.de>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id AE5DF7A162
	for <gnats-bugs@gnats.NetBSD.org>; Fri,  5 Apr 2019 10:06:22 +0000 (UTC)
Message-Id: <20190405100613.85E985CC86C@emmas.aprisoft.de>
Date: Fri,  5 Apr 2019 12:06:13 +0200 (CEST)
From: martin@NetBSD.org
Reply-To: martin@NetBSD.org
To: gnats-bugs@NetBSD.org
Subject: NetBSD 8.0_STABLE i386 domU fails to boot
X-Send-Pr-Version: 3.95

>Number:         54099
>Category:       port-xen
>Synopsis:       NetBSD 8.0_STABLE i386 domU fails to boot
>Confidential:   no
>Severity:       critical
>Priority:       high
>Responsible:    bouyer
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Apr 05 10:10:00 +0000 2019
>Closed-Date:    Mon Apr 08 07:16:12 +0000 2019
>Last-Modified:  Mon Apr 08 07:16:12 +0000 2019
>Originator:     Martin Husemann
>Release:        NetBSD 8.99.36
>Organization:
The NetBSD Foundation, Inc.
>Environment:
System: NetBSD seven-days-to-the-wolves.aprisoft.de 8.99.36 NetBSD 8.99.36 (XEN3_DOM0) #3: Fri Apr 5 11:34:08 CEST 2019 martin@seven-days-to-the-wolves.aprisoft.de:/work/src/sys/arch/amd64/compile/XEN3_DOM0 amd64
Architecture: x86_64
Machine: amd64
>Description:

On a -current DOM0 with Xen xenkernel411-4.11.1nb1 a netbsd-8 i386 domU
kernel fails to start, console logs:

[ 501.1570964] xbd backend: attach device wd0i (size 209715200) for domain 7
[ 503.1871100] xbdback_map_shm: xen_shm error -3 xbd IO domain 7: error -3

(the first is normal, just the backend for xbd0 of that domain).

Parsing config from x-i386-8
Copyright (c) 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2003, 2004, 2005,
    2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014, 2015, 2016, 2017,
    2018, 2019 The NetBSD Foundation, Inc.  All rights reserved.
Copyright (c) 1982, 1986, 1989, 1991, 1993
    The Regents of the University of California.  All rights reserved.

NetBSD 8.0_STABLE (XEN3PAE_DOMU) #1: Fri Apr  5 09:59:12 CEST 2019
        martin@seven-days-to-the-wolves.aprisoft.de:/work/src-8/sys/arch/i386/compile/XEN3PAE_DOMU
total memory = 2048 MB
avail memory = 2002 MB
running cgd selftest aes-xts-256 aes-xts-512 done
mainbus0 (root)
hypervisor0 at mainbus0: Xen version 4.11.1nb1
vcpu0 at hypervisor0
vcpu0: AMD Phenom(tm) II X6 1075T Processor, id 0x100fa0
vcpu0: package 0, core 4, smt 0
vcpu1 at hypervisor0
vcpu1: AMD Phenom(tm) II X6 1075T Processor, id 0x100fa0
vcpu1: package 0, core 0, smt 0
vcpu2 at hypervisor0
vcpu2: AMD Phenom(tm) II X6 1075T Processor, id 0x100fa0
vcpu2: package 0, core 1, smt 0
vcpu3 at hypervisor0
vcpu3: AMD Phenom(tm) II X6 1075T Processor, id 0x100fa0
vcpu3: package 0, core 2, smt 0
xenbus0 at hypervisor0: Xen Virtual Bus Interface
xencons0 at hypervisor0: Xen Virtual Console Driver
xenbus: can't get state for device/suspend/event-channel (2)
xbd0 at xenbus0 id 1: Xen Virtual Block Device Interface
xennet0 at xenbus0 id 0: Xen Virtual Network Interface
xennet0: MAC address aa:07:b4:54:a8:76
balloon0 at xenbus0 id 0: Xen Balloon driver
balloon0: current reservation: 2097152 KiB
fatal page fault in supervisor mode
trap type 6 code 0 eip 0xc012fff6 cs 0x9 eflags 0x10286 cr2 0x24 ilevel 0x8 esp 0xc06be6ac
curlwp 0xc2d4dd20 pid 0 lid 2 lowest kstack 0xda67a2c0
kernel: supervisor trap page fault, code=0
Stopped in pid 0.2 (system) at  netbsd:xbd_handler+0x1c6:       movl    24(%esi)
,%eax
xbd_handler(c2d50000,c096b000,c,c2d39340,da67beec,c0116f1d,c2d39340,da67bf24,c01
15b10,b2c644) at netbsd:xbd_handler+0x1c6
intr_biglock_wrapper(c2d39340,da67bf24,c0115b10,b2c644,0,c0698360,c038a7b3,c0699
e10,c0581e00,40) at netbsd:intr_biglock_wrapper+0x1f
evtchn_do_event(c,da67bf24,c096b000,c096b800,c096b880,0,1,c2d4dd20,c0581e00,da67
bf70) at netbsd:evtchn_do_event+0x12d
do_hypervisor_callback(da67bf24,0,c0110011,c0580031,c2d40011,da670011,c0581e00,c
2d4dd20,da67bf70,1) at netbsd:do_hypervisor_callback+0xfc
hypervisor_callback(c2d4dd20,0,c2d4dd20,c0380710,c2d4dd20,0,c0102031,c2d4dd20,96
b000,c0597200) at netbsd:hypervisor_callback+0x64
idle_loop(c2d4dd20,96b000,c0597200,0,c0100075,0,0,0,0,0) at netbsd:idle_loop+0xf
d
ds          c0380011    fork1+0x5b1
es          c0580011    db_GrpC+0x11
fs          c3130031
gs          c3130011
edi         ffffffff
esi         0
ebp         da67be98
ebx         c2d50000
edx         db1a8000
ecx         db1a8000
eax         0
eip         c012fff6    xbd_handler+0x1c6
cs          9
eflags      10286
esp         da67be60
ss          11
netbsd:xbd_handler+0x1c6:       movl    24(%esi),%eax


>How-To-Repeat:
see above

>Fix:
n/a

>Release-Note:

>Audit-Trail:
From: Martin Husemann <martin@duskware.de>
To: gnats-bugs@netbsd.org
Cc: 
Subject: Re: port-xen/54099: NetBSD 8.0_STABLE i386 domU fails to boot
Date: Fri, 5 Apr 2019 12:11:53 +0200

 Actually it seems all NetBSD i386 domUs fail with this dom0/xen version.

 Martin

Responsible-Changed-From-To: port-xen-maintainer->bouyer
Responsible-Changed-By: bouyer@NetBSD.org
Responsible-Changed-When: Sun, 07 Apr 2019 12:06:28 +0000
Responsible-Changed-Why:
I have a fix almost ready


State-Changed-From-To: open->feedback
State-Changed-By: bouyer@NetBSD.org
State-Changed-When: Sun, 07 Apr 2019 12:24:26 +0000
State-Changed-Why:
I just commited a fix, can you confirm the problem is gone ?


From: "Manuel Bouyer" <bouyer@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/54099 CVS commit: src/sys/arch/xen/include
Date: Sun, 7 Apr 2019 12:23:54 +0000

 Module Name:	src
 Committed By:	bouyer
 Date:		Sun Apr  7 12:23:54 UTC 2019

 Modified Files:
 	src/sys/arch/xen/include: xenring.h

 Log Message:
 blkif_x86_{32,64}_* are not identical to blkif_*, internal fields have
 different alignements and this change their sizes. Copy them back from
 their netbsd-8 definitions.
 Fixes PR port-xen/54099


 To generate a diff of this commit:
 cvs rdiff -u -r1.3 -r1.4 src/sys/arch/xen/include/xenring.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: feedback->closed
State-Changed-By: martin@NetBSD.org
State-Changed-When: Mon, 08 Apr 2019 07:16:12 +0000
State-Changed-Why:
Confirmed fixed, thanks!


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.43 2018/01/16 07:36:43 maya Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2017 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.